--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,66 +1,64 @@
-<div>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary navbar bg-primary" data-bs-theme="dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Friends Book</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <nav
+    class="navbar bg-body-secondary navbar-expand-lg navbar-static-top"
+    data-bs-theme="light"
+  >
+    <div class="container">
+      <a class="navbar-brand" href="#">Friends Book</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent"></div>
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/home"
+            >Home</a
+          >
+        </li>
+        <li class="nav-item">
+          <button type="button" class="btn position-relative">
+            Notifications
+            <span
+              class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
+            >
+              {{ friendRequestCount }}
+              <span class="visually-hidden">unread messages</span>
+            </span>
+          </button>
+        </li>
 
-                <!-- <li class="nav-item dropdown"> -->
-                <!-- <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a> -->
-                <!-- <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul> -->
-                <!-- </li> -->
-                <!-- <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li> -->
-
-                <!-- <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form> -->
-
-            </div>
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
-                </li>
-                <li class="nav-item">
-                    <button type="button" class="btn  position-relative">
-                        Notifications
-                        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
-                          {{friendRequestCount}}
-                          <span class="visually-hidden">unread messages</span>
-                        </span>
-                      </button>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/network">Network</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/friends">Friends</a>
-                </li>
-                <li *ngIf="currentuserrole === 'Admin'" class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/allusers">All Users</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/setting">Settings</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/logout">Logout</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</div>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/network"
+            >Network</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/friends"
+            >Friends</a
+          >
+        </li>
+        <li *ngIf="currentuserrole === 'Admin'" class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/allusers"
+            >All Users</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/setting"
+            >Settings</a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" routerLink="/logout"
+            >Logout</a
+          >
+        </li>
+      </ul>
+    </div>
+  </nav>
