--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
   <nav
-    class="navbar bg-body-secondary navbar-expand-lg navbar-static-top"
+    class="navbar bg-body-secondary navbar-expand-lg navbar-static-top fixedPos"
     data-bs-theme="light"
   >
     <div class="container">
