--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,9 +2,10 @@
   <app-spinner></app-spinner>
 </div>
 <div *ngIf="!isLoading">
+<div>
   <app-header></app-header>
-
-  <div class="container" style="padding-top: 56px">
+</div>
+  <div class="container mt-10">
     <div class="row">
       <div class="col-3">
         <div
